--- a/js3.html
+++ b/js3.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <h1>JavaScript 3</h1>
-    <script src="js/j3.js"></script>
+    <script src="js3.js"></script>
 </body>
 </html>
