--- a/js4.html
+++ b/js4.html
@@ -7,8 +7,27 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Javascript4</h1>
+    <h1>Javascript funciones</h1>
+    <div>
+        <div>
+            <label for="numero">Numero</label>
+            <input type="text" name="numero"
+            id="numero">
+        </div>
+    </div>
 
-    <script src="js4.html"></script>
+    <div>
+        <div>
+            <label for="resul">Resultado</label>
+            <input type="text" name="resul"
+            id="resul">
+        </div>
+    </div>
+    <button onclick="funcion"> Calcular</button>
+    </div>
+</div>
+
+
+    <script src="js/js4.js"></script>
 </body>
 </html>
