Actualización archivo 19 - Oct

--- a/js5.html
+++ b/js5.html
@@ -11,21 +11,31 @@
     <h2>Calculadora</h2>
     
     <div>
-        <label for="num1">Numero 1</label><input type="text" name="" id="num1">
+        <label for="num1">Numero 1: </label><input type="text" name="" id="num1">
     </div>
     <div>
-        <label for="num2">Numero 2</label><input type="text" name="" id="num2">
+        <label for="num2">Numero 2: </label><input type="text" name="" id="num2">
     </div>
     <div>
-        <label for="operacion">Operacion(Ingrese el simbolo)</label><input type="text" name="" id="operacion">
+        <label for="operacion">Operacion(Ingrese el simbolo): </label><input type="text" name="" id="operacion">
     </div>
     <div>
-        <label for="resultado">Resultado</label><input type="text" name="" id="resultado">
+        <label for="resultado">Resultado: </label><input type="text" name="" id="resultado">
     </div>
     <button id="boton" onclick="calcular()">Calcular</button>
 
     <hr>
 
+<h2>Programa Tabla</h2>
+<div>
+    <label for=""> Tabla deseada: 
+        <input type="text" name="" id="tabla">
+    </label>
+</div>
+<p id="tabla2"></p>
+<div>
+    <button onclick="tablamultiplicar()">Imprimir tabla</button>
+</div>
 
 
 
