Correción link js3

--- a/js3.html
+++ b/js3.html
@@ -7,7 +7,8 @@
     <title>Js3</title>
 </head>
 <body>
+    <a id="Regresar" href="https://ivan-bs.github.io/Fundadementos-desarrollo-web-/">Regresar</a>    
     <h1>JavaScript 3</h1>
-    <script src="js3.js"></script>
+    <script src="js/js3.js"></script>
 </body>
 </html>
