--- a/index.html
+++ b/index.html
@@ -8,12 +8,15 @@
     <link rel="stylesheet" href="css/style.css"/>
 </head>
 <body>
-    <a id="Regresar" href="https://fdw52ad2022.github.io/website52///">Regresar</a>    
+    <a id="Regresar" href="https://ivan-bs.github.io/Fundadementos-desarrollo-web-/">Regresar</a>
     <h1>Lista de mis Actividades</h1>
     <h2>Usuario: Ivan-BS</h1>
     <hr>
     <ul>
+        <li><a href="https://fdw52ad2022.github.io/website52/Ivan-BS/js1.html" target="_blank">Ejercio JavaScript 1</li>
         <li><a href="https://fdw52ad2022.github.io/website52/Ivan-BS/js2.html" target="_blank">Ejercio JavaScript 2</li>
+            <li><a href="https://ivan-bs.github.io/Fundadementos-desarrollo-web-/js3.html" target="_blank">Ejercio JavaScript 3</li>
+        
 
     </ul>
 </body>
