--- a/js3.html
+++ b/js3.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Js3</title>
+    <link rel="stylesheet" href="css/style.css"/>
 </head>
 <body>
     <a id="Regresar" href="https://ivan-bs.github.io/Fundadementos-desarrollo-web-/">Regresar</a>    
