--- a/js4.html
+++ b/js4.html
@@ -7,25 +7,36 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Javascript funciones</h1>
+    <h1>Javascript Funciones</h1>
+    <h2>Programa de Divisores</h2>
     <div>
-        <div>
-            <label for="numero">Numero</label>
-            <input type="text" name="numero"
-            id="numero">
-        </div>
+        <label for="numero">Numero</label>
+        <input type="text" name="numero" id="numero">
     </div>
 
     <div>
-        <div>
-            <label for="resul">Resultado</label>
-            <input type="text" name="resul"
-            id="resul">
-        </div>
+        <label for="resul">Resultado</label>
+        <input type="text" name="resul" id="resul">
     </div>
-    <button onclick="funcion"> Calcular</button>
+
+    <div>
+        <button onclick="calcular()">Calcular</button>
     </div>
-</div>
+
+
+    <h2>Programa de Calculadora Imagenes</h2>
+    <div>
+        <label for="opcion">Escojer el numero</label>
+        <input type="text" name="opcion" id="opcion">
+    </div>
+
+    <div>
+        <img id="imagen" style="width: 200px;" src="" alt="">
+    </div>
+
+    <div>
+        <button onclick="cambiarimg()">Ver Imagen</button>
+    </div>
 
 
     <script src="js/js4.js"></script>
